Add materials in INFO.

--- a/_posts/3015-09-16-info.md
+++ b/_posts/3015-09-16-info.md
@@ -9,8 +9,16 @@ This is the INFO of my blog.
 
 I was a student studying astrophysics, cosmology. I am learning Sanskrit, so as to read _Gita_.
 
-I'm a linux user. I also use a lisp-like language, _Mathematica_. I am learning SICP, via Python.
+I'm a linux user. I also use a lisp-like language, _Mathematica_. I am learning SICP, via Python, the note of which taken by me is at [here](https://github.com/shuiruge/learning-sicp).
 
 I usually write blogs in Chinese, but sometimes in English.
+
+<hr>
+
+> Writting is good, thinking is better;
+> cleverness is good, patience is better.
+
+-- H.Hesse, _Siddhartha_
+
 
 
