--- a/_posts/3015-09-16-info.md
+++ b/_posts/3015-09-16-info.md
@@ -22,4 +22,9 @@ I usually write blogs in Chinese, but sometimes in English.
 -- H.Hesse, _Siddhartha_
 
 
+<hr>
 
+### To-do
+
+ - [ ] Add tag.
+ - [ ] Add search function
