--- a/_posts/2015-12-15-plan.md
+++ b/_posts/2015-12-15-plan.md
@@ -9,12 +9,12 @@ A fatal problem arises after moving to Dali. Before, in Deqin, I had little time
 
 So, I need a plan, and of course the willpower to follow it. The plan is as follow.
 
-* I shall get up in 6:00.
+- I shall get up in 6:00.
 
-* An one-day-plan is then determined, this is the first thing of one day.
+- An one-day-plan is then determined, this is the first thing of one day.
 
-* Once this plan is made, then fixed is it; only dangers can it be changed by.
+- Once this plan is made, then fixed is it; only dangers can it be changed by.
 
-* No matter what happens in this day, this plan must be done. Must not sleep until completing the plan.
+- No matter what happens in this day, this plan must be done. Must not sleep until completing the plan.
 
-* So, there is no fixed time for sleeping at night.
+- So, there is no fixed time for sleeping at night.
