--- a/_posts/2015-12-15-plan.md
+++ b/_posts/2015-12-15-plan.md
@@ -11,7 +11,7 @@ So, I need a plan, and of course the willpower to follow it. The plan is as foll
 
 - I shall get up in 6:00.
 
-- An one-day-plan is then determined, this is the first thing of one day.
+- An one-day-plan is then determined, this is the first thing of one day -- sitting before a desk, thinking carefully of it.
 
 - Once this plan is made, then fixed is it; only dangers can it be changed by.
 
