--- a/_drafts/2015-12-15-no-title.md
+++ b/_drafts/2015-12-15-no-title.md
@@ -5,4 +5,10 @@ title: No Title
 ---
 
 
-十二月八日早上最后一次在德钦看过日出后便出发去丽江。asdf
+十二月八日早上最后一次在德钦看过日出后便出发去丽江，次日清晨乘火车去大理。
+
+接下来几天的生活几乎没有什么规律，或读书或出游，偶尔干些活（炒菜）。
+
+每日学习ST，但效率不高。我得珍惜这段清闲的时日。
+
+今天看PhD申请的帖子，没有什么想法。但正如Rilke所言，（心理上的）时间是虚构的、不真实的。
