Use plug-in of your browser to show LaTeX.

--- a/_posts/2015-09-16-test.md
+++ b/_posts/2015-09-16-test.md
@@ -7,3 +7,11 @@ title: Test
 LaTeX: $\alpha$
 
 $$ \frac{1}{2} $$
+
+\begin{equation}
+	\mathbb{R}
+\end{equation}
+
+I still have no idea on how to show LaTeX directly in Jekyll. So:
+
+* Use additional plug-in of your browser instead to fulfill this function.
