--- a/_posts/2015-09-16-test.md
+++ b/_posts/2015-09-16-test.md
@@ -8,6 +8,9 @@ LaTeX: $\alpha$
 
 $$ \frac{1}{2} $$
 
+\begin{equation}
+	\mathbb{R}
+\end{equation}
 
 I still have no idea on how to show LaTeX directly in Jekyll. So:
 
