Fixed some words.

--- a/_posts/2018-02-13-no-title.md
+++ b/_posts/2018-02-13-no-title.md
@@ -7,11 +7,11 @@ title: No Title
 
 一月末完成了项目的第一个版本，并向需求池提交了需求。但要等过完年才能交到开发人员手上。突然无事可做。读了三天 [Learning-to-learn](https://github.com/deepmind/learning-to-learn) 的文章和代码。很有趣，跟我之前想做的颇有些像。它也促使我考虑 TensorFlow 的代码习惯，并写了[一篇博客](https://shuiruge.github.io/programming/2018/02/10/thoughts-on-tensorflow-and-functionality/)。
 
-接下来和同事讨论将我刚来公司做的项目迁移到 STORM 上的事情。这是一个很怪的想法：在 STORM 上做统计。我们计算需要多少内存，发现想法可行。于是着手写代码。是个练习 Java 的好机会。上线要等到年后了。
+接下来和同事讨论将我刚来公司时做的项目迁移到 STORM 上的事情。这是一个很怪的想法：在 STORM 上做统计。我们计算需要多少内存，发现想法可行。于是着手写代码。是个练习 Java 的好机会。上线要等到年后了。
 
 午饭后在窗边晒太阳，读古希腊神话。不知不觉入了迷。很费力才能回到现实中。YZ 午饭后去骑车。大概是在一个开阔的平地上慢悠悠地绕圈吧。如果阳光明媚，确实叫人愉悦。可惜公司这里既没有自行车，也没有开阔的平地，只有一片又一片丑陋的办公楼。
 
-早上习惯性赖床。想起小卿每天六点准时起床，从不有所迟疑，很是羡慕。（她最近学德语有些入魔，连平常的对话（文本）都要用德语，我只好用 Google 翻译勉强应付。）
+早上习惯性赖床。想起小卿每天六点准时起床，从不迟疑，很是羡慕。（她最近学德语有些入魔，连平常的对话（文本）都要用德语，我只好用 Google 翻译勉强应付。）
 
 出游计划：
   1. 春节过后去南京；
