--- a/_posts/2018-07-08-hangzhou.md
+++ b/_posts/2018-07-08-hangzhou.md
@@ -5,7 +5,7 @@ title: 杭州之行
 category: travailler
 ---
 
-沿九溪向北、向上行走。浅处水流清澈透明，活泼跳跃；深处则呈青绿色，缓慢稳重。“[Still waters run deep”](https://en.wikipedia.org/wiki/Still_waters_run_deep)”，果真如此。
+沿九溪向北、向上行走。浅处水流清澈透明，活泼跳跃；深处则呈青绿色，缓慢稳重。“[Still waters run deep](https://en.wikipedia.org/wiki/Still_waters_run_deep)”，果真如此。
 
 从龙井入山。开始下雨。山中无风，潮湿闷热，云雾升腾弥漫。四下寂静无人。下山后访法喜寺、法净寺、法镜寺、灵隐寺，最终抵达西湖畔。山上可以俯瞰整个杭州城。
 
