--- a/_posts/2014-11-02-no-title.md
+++ b/_posts/2014-11-02-no-title.md
@@ -1,17 +1,15 @@
 ---
 layout: blog-post
 comments: true
-title: No Title
+title: 无标题
 ---
 
 
-<p>
+
 昨天的讨论班上，我头一次意识到电子相互作用时中间的光子传播子（树图阶）是Off-shell的，即是虚粒子。即便在传播子的两个节点上各有一个4-delta函数以保证4-动量守恒。当然，这两点是两回事儿。可是，在我的记忆中，不知是哪里来的臆想，竟将它们视为紧密联系的！
-</p>
-<p>
+
 这一点叫人惊讶！因为，记忆看样子极其不可靠：记忆无法记住全部的来龙去脉，只能保留一个结果。这样自然也就难于判断这结果是否来自臆想，或者这推导结果的过程中是否有“致命的”臆想成份，或细想之下并不合理的假设。
-</p>
-<p>
+
 然而，在思考和计算的时候，我们自然也难于重复所有的记忆中的细节——否则我们把时间都用来重新检验记忆中的结论就无法去弄新的东西了。让我们的记忆记住每个细节自然也是有悖人之本能的事情。这样，对一个结论迅速地做出判断是至关重要的：
-<i>尽管这判断可能是错误的，但我们总可以提高判断的正确率，这便是我们要寻求的、必要的能力！</i>
-</p>
+_尽管这判断可能是错误的，但我们总可以提高判断的正确率，这便是我们要寻求的、必要的能力！_
+
