--- a/_posts/2022-06-27-sketch.md
+++ b/_posts/2022-06-27-sketch.md
@@ -1,9 +1,7 @@
 ---
 layout: blog-post
-title: Sketch
+title: 剪影
 ---
-
-# 剪影
 
 西方的文学，讲求细腻丰满。一如西方的绘画，描摹人像、表情、动作，细致入微，仿佛其人正在眼前。东方的文学则反之，讲求意境和想象，一如东方的绘画，山水之间，墨迹若隐若现。庭院、人像莫不一笔带过，观者要闭上眼睛，方能看清其面目！
 
