--- a/_posts/2021-12-24-bwv565.md
+++ b/_posts/2021-12-24-bwv565.md
@@ -8,12 +8,13 @@ category: life,music
 
 CL 推荐了钢琴版的 BWV 565，搜索的过程中，找到了各种演奏版本，如下：
 
-钢琴：https://y.qq.com/n/ryqq/songDetail/208662687?songtype=0
-交响乐：https://y.qq.com/n/ryqq/songDetail/4911559?songtype=0
-古典吉他：https://y.qq.com/n/ryqq/songDetail/323111948?songtype=0
-电吉他：https://y.qq.com/n/ryqq/songDetail/300113739?songtype=0
-爵士乐：https://y.qq.com/n/ryqq/songDetail/245421111?songtype=0
-小提琴（付费）：https://y.qq.com/n/ryqq/songDetail/298466603?songtype=0
+- 钢琴：[QQ音乐](https://y.qq.com/n/ryqq/songDetail/208662687?songtype=0)
+- 交响乐：[QQ音乐](https://y.qq.com/n/ryqq/songDetail/4911559?songtype=0)
+- 古典吉他：[QQ音乐](https://y.qq.com/n/ryqq/songDetail/323111948?songtype=0)
+- 电吉他：[QQ音乐](https://y.qq.com/n/ryqq/songDetail/300113739?songtype=0)
+- 爵士乐：[QQ音乐](https://y.qq.com/n/ryqq/songDetail/245421111?songtype=0)
+- 小提琴：[QQ音乐（付费）](https://y.qq.com/n/ryqq/songDetail/298466603?songtype=0)
+
 非常有趣。
 
-注意：因为 QQ 音乐的问题，以上链接只能在电脑上打开。
+注意：因为QQ音乐的问题，以上链接只能在电脑上打开。
