--- a/_posts/2023-01-08-barbecue.md
+++ b/_posts/2023-01-08-barbecue.md
@@ -7,8 +7,8 @@ title: 烧烤
 
 用柴火把炭点燃。很快柴火发出哔哔啪啪的声音。待柴火燃尽，只剩木炭的阵阵红光，无烟亦无火，这时架上铁网，铺上肉和蔬菜。木炭仅用三两块，所以温度不高。倒像是看破世事的老者，不温不火、优哉游哉。这种火候，不用担心烤过头，只需耐心等待。这时一手持书，鼻子闻着空气中弥漫的香气，耳朵听着滋滋啦啦冒油的声响，夜幕降临时，还可以伸出手来暖一暖，实在惬意。
 
-苏东坡煮肉，用的也是这种火候[^东坡肉]，大概也是一边抚卷，一边嗅着肉香吧。
+苏东坡煮肉，用的也是这种火候[^dongpo_meat]，大概也是一边抚卷，一边嗅着肉香吧。
 
-[^东坡肉]: 见《猪肉颂》：
+[^dongpo_meat]: 见《猪肉颂》：
 
     > 慢着火、少著水，柴头罨烟焰不起，待他自熟莫催它，火候足时它自美。
