--- a/_posts/2023-08-25-viveka.md
+++ b/_posts/2023-08-25-viveka.md
@@ -1,6 +1,6 @@
 ---
 layout: blog-post
-title: Viveka and One-Pointedness
+title: Viveka, One-Pointedness, and Elimination of Samskara
 ---
 
 ## Viveka
@@ -18,6 +18,14 @@ He who gains viveka gains the highest ability of monitoring the mind [^mind]. Fo
   [^mind]: Recall that we use mind as an equivalent of consciousness.
 
 So, he who gains viveka gains the most perfect one-pointedness.
+
+## Elimination of Samskara
+
+Samskara (saṃskāra in Sanskrit) is the circulation of interrelated emotions and thoughts. Because of one's implicit memories, immediately after some kind of emotion, there raises thoughts, which in turn enhance the emotion, which in turn creates more thoughts. This circulation amplifies both the emotion and the thoughts, as a result of which samskara is reconsolidated by itself. We live in the world of samskaras, the seeds that drive our unconscious behaviors, and that trap us into irrational circulations.
+
+He who gains viveka breaks the circulation at any moment, so that samskara cannot reconsolidate, but only dissipate (in the way of habituation).
+
+So, he who gains viveka eliminates any samskara that raises.
 
 ## References
 
