--- a/_posts/2023-08-25-viveka.md
+++ b/_posts/2023-08-25-viveka.md
@@ -3,13 +3,13 @@ layout: blog-post
 title: Viveka, One-Pointedness, and Elimination of Samskara
 ---
 
-## Viveka
+## Viveka Is the Insight Knowledge of Discriminating Moments
 
-Viveka is the insight knowledge of discriminating moments. Yogis and buddhists found that consciousness is not a continuum, but constitutes a series of indivisible temporal units, called moments. [^moments] It is like a movie made up of a series of frames. These moments are transient, leaving to us the illusion that consciousness is continuous. He who gains viveka has the ability of discriminating these moments, realizing that a moment and the following are distinct, and that only after the falling of the preceding will a moment arise.
+ Yogis and buddhists found that consciousness is not a continuum, but constitutes a series of indivisible temporal units, called moments. [^moments] It is like a movie made up of a series of frames. These moments are transient, leaving to us the illusion that consciousness is continuous. He who gains viveka has the ability of discriminating these moments, realizing that a moment and the following are distinct, and that only after the falling of the preceding will a moment arise.
 
 [^moments]: For details, see chapter 4 of _A Comprehensive Manual of Abhidhamma_, and the sections from 3.51 to 3.53 in _The Yoga Sutras of Patanjali_.
 
-## One-Pointedness
+## With Viveka the Most Perfect One-Pointedness Is Fulfilled
 
 One-pointedness is the state of attention that is stabilized to a single object. As discussed in a [previous note](2023-05-20-meditation.md), the key to one-pointedness is the ability of monitoring the mind.
 
@@ -19,7 +19,7 @@ He who gains viveka gains the highest ability of monitoring the mind [^mind]. Fo
 
 So, he who gains viveka gains the most perfect one-pointedness.
 
-## Elimination of Samskara
+## Viveka Eliminates Samskaras
 
 Samskara (saṃskāra in Sanskrit) is the circulation of interrelated emotions and thoughts. Because of one's implicit memories, immediately after some kind of emotion, there raises thoughts, which in turn enhance the emotion, which in turn creates more thoughts. This circulation amplifies both the emotion and the thoughts, as a result of which samskara is reconsolidated by itself. We live in the world of samskaras, the seeds that drive our unconscious behaviors, and that trap us into irrational circulations.
 
