--- a/_posts/2023-09-01-pattern.md
+++ b/_posts/2023-09-01-pattern.md
@@ -7,8 +7,10 @@ title: 湍流、重整化群和模式识别
 
 费根鲍姆的重整化群方程（RGE）可以描述湍流在临界状态下的尺度不变性。准确地说，该 RGE 的解`g`的系数，确定了湍流的一些可观测量的值（例如费根鲍姆系数`α`）。然而，我们并不清楚`g`代表了什么。实际上，费根鲍姆给了一个非常复杂的定义，以及一个实在不能令人满意的推导。所以，另一个问题是，*费根鲍姆的`g`，究竟是什么？*
 
-在场论里，人们用 RGE 计算拉格朗日量的系数如何随能标的改变而改变。可是，我想不到拉格朗日量和`g`有什么明确的关系。或者，RGE 是用来计算*作用量的表达式*如何随能标的改变而改变的。从作用量的极值可以得到经典位形。也可以通过作用量构成配分泛函，也就是位形的概率分布。所以，我们可以猜测，`ｇ`对应着作用量，而`g`的系数依然是拉格朗日量的系数。
+在场论里，人们用 RGE 计算拉格朗日量的系数如何随能标的改变而改变。可是，我想不到拉格朗日量和`g`有什么明确的关系。或者，RGE 是用来计算*作用量的表达式*如何随能标的改变而改变的。从作用量的极值可以得到经典位形。也可以通过作用量构成配分泛函，也就是位形的概率分布。所以，我们可以猜测，`ｇ`对应着作用量。在这种情况下，`g`的参数依旧是拉格朗日量的系数。
 
-这个猜测也暗示了第一个问题的答案，即两个湍流图像很像是什么意思。首先我们知道，波尔兹曼机或它的深度版本（也称为 [energy model](https://github.com/shuiruge/energymodel)）学习了数据样本的概率分布。这个概率分布的极大值表示“抽象模式”，因为它们是波尔兹曼分布对应的随机动力系统的吸引子。所以，如果`g`刻画了湍流位形的概率分布，那么两个湍流很像就意味着它们属于同一个吸引子的吸引域，亦即它们具有相同的“抽象模式”。
+第一个问题，即两个湍流图像很像是什么意思，也暗示了这个猜测。首先我们知道，波尔兹曼机或它的深度版本（也称为 [energy model](https://github.com/shuiruge/energymodel)）学习了数据样本的概率分布。这个概率分布的极大值表示“抽象模式”，因为它们是波尔兹曼分布对应的随机微分方程（SDE）的吸引子。波尔兹曼机是大脑的一个简化模型。大脑认为两个湍流很像，就意味着它们属于同一个吸引子的吸引域，亦即它们具有相同的“抽象模式”。如果`g`对应于作用量，那么它正好刻画了湍流位形的概率分布，也就是波尔兹曼机。
 
 以上是二〇二三年秋天，站在从大连开往烟台的轮船的甲板上，在清爽的海风中，观看轮船激起的湍流时，偶得的一点念想。
+
+---
