--- a/_posts/2023-08-25-viveka.md
+++ b/_posts/2023-08-25-viveka.md
@@ -11,7 +11,7 @@ title: Viveka, One-Pointedness, and Elimination of Samskara
 
 ## With Viveka the Most Perfect One-Pointedness Is Fulfilled
 
-One-pointedness is the state of attention that is stabilized to a single object. As discussed in a [previous note](2023-05-20-meditation.md), the key to one-pointedness is the ability of monitoring the mind.
+One-pointedness is the state of attention that is stabilized to a single object. As discussed in a [previous note](2023-05-20-attention.md), the key to one-pointedness is the ability of monitoring the mind.
 
 He who gains viveka gains the highest ability of monitoring the mind [^mind]. For him, the mind comes to be a series of moments in which every moment is realized, so that nothing can escape from his sight.
 
