--- a/_posts/2023-08-25-viveka.md
+++ b/_posts/2023-08-25-viveka.md
@@ -1,6 +1,6 @@
 ---
 layout: blog-post
-title: Viveka, One-Pointedness, and Elimination of Samskara
+title: Viveka
 ---
 
 ## Viveka Is the Insight Knowledge of Discriminating Moments
@@ -9,23 +9,15 @@ title: Viveka, One-Pointedness, and Elimination of Samskara
 
 [^moments]: For details, see chapter 4 of _A Comprehensive Manual of Abhidhamma_, and the sections from 3.51 to 3.53 in _The Yoga Sutras of Patanjali_.
 
-## With Viveka the Most Perfect One-Pointedness Is Fulfilled
+## Viveka Leads to Superlative Ability of Monitoring Mind
 
-One-pointedness is the state of attention that is stabilized to a single object. As discussed in a [previous note](2023-05-20-attention.md), the key to one-pointedness is the ability of monitoring the mind.
+What is the life of his who gains viveka? While applying viveka, every moment is realized, so that his mind [^mind] is perfectly monitored. He lives in a state of constant identification with an observer [^observer], detached from whatever he is doing or thinking.
 
-He who gains viveka gains the highest ability of monitoring the mind [^mind]. For him, the mind comes to be a series of moments in which every moment is realized, so that nothing can escape from his sight.
+  [^mind]: We use the word mind as an equivalent of consciousness.
 
-  [^mind]: Recall that we use mind as an equivalent of consciousness.
+  [^observer]: Observer who monitors the mind.
 
-So, he who gains viveka gains the most perfect one-pointedness.
-
-## Viveka Eliminates Samskaras
-
-Samskara (saṃskāra in Sanskrit) is the circulation of interrelated emotions and thoughts. Because of one's implicit memories, immediately after some kind of emotion, there raises thoughts, which in turn enhance the emotion, which in turn creates more thoughts. This circulation amplifies both the emotion and the thoughts, as a result of which samskara is reconsolidated by itself. We live in the world of samskaras, the seeds that drive our unconscious behaviors, and that trap us into irrational circulations.
-
-He who gains viveka breaks the circulation at any moment, so that samskara cannot reconsolidate, but only dissipate (in the way of habituation).
-
-So, he who gains viveka eliminates any samskara that raises.
+As discussed in a [previous note](2023-05-20-attention.md), the ability of monitoring the mind leads to controlled synaptic plasticity, by which we can plant what we want to cultivate and uproot what we want to eliminate. So, he who gains viveka gains the ability of shaping his brain at will.
 
 ## References
 
