--- a/_posts/2023-08-25-viveka.md
+++ b/_posts/2023-08-25-viveka.md
@@ -17,6 +17,8 @@ What is the life of his who gains viveka? While applying viveka, every moment is
 
   [^observer]: Observer who monitors the mind.
 
+    You may wonder who is the observer? It is the mind that everything has been excluded. But different cultures have different views on it. In the yoga tradition, it is identified as an entity named Atman or Supreme Self. And for 王阳明, it is identified with 良知. While for buddhists, it is no one. No matter what it is called and whether it is some entity, we do have the ability of monitoring the mind, as it is so when we are monitoring the mind.
+
 As discussed in a [previous note](2023-05-20-attention.md), the ability of monitoring the mind leads to controlled synaptic plasticity, by which we can plant what we want to cultivate and uproot what we want to eliminate. So, he who gains viveka gains the ability of shaping his brain at will.
 
 ## References
