--- a/_posts/2023-08-25-viveka.md
+++ b/_posts/2023-08-25-viveka.md
@@ -5,9 +5,15 @@ title: Viveka
 
 ## Viveka Is the Insight Knowledge of Discriminating Moments
 
- Yogis and buddhists found that consciousness is not a continuum, but constitutes a series of indivisible temporal units, called moments. [^moments] It is like a movie made up of a series of frames. These moments are transient, leaving to us the illusion that consciousness is continuous. He who gains viveka has the ability of discriminating these moments, realizing that a moment and the following are distinct, and that only after the falling of the preceding will a moment arise.
+Yogis and buddhists found that consciousness is not a continuum, but constitutes a series of indivisible temporal units, called moments. [^moments] It is like a movie made up of a series of frames. These moments are transient, leaving to us the illusion that consciousness is continuous. Viveka is the ability of discriminating these moments, realizing that a moment and the following are distinct, and that only after the falling of the preceding will a moment arise. [^viveka]
 
-[^moments]: For details, see chapter 4 of _A Comprehensive Manual of Abhidhamma_, and the sections from 3.51 to 3.53 in _The Yoga Sutras of Patanjali_.
+  [^moments]: For details, see chapter 4 of _A Comprehensive Manual of Abhidhamma_, and the sections from 3.52 to 3.54 in _The Yoga Sutras of Patanjali_.
+
+  [^viveka]: Section 3.52 in _The Yoga Sutras of Patanjali_ defines viveka and declares the path to viveka:
+
+    > From samyama on the moment and its succession, there is knowledge born of discrimination.
+
+    Here, "samyama" means concentration via focusing, meditation, and samadhi in due order. And the "knowledge born of discrimination" is viveka.
 
 ## Viveka Leads to Superlative Ability of Monitoring Mind
 
@@ -17,7 +23,7 @@ What is the life of his who gains viveka? While applying viveka, every moment is
 
   [^observer]: Observer who monitors the mind.
 
-    You may wonder who is the observer? It is the mind that everything has been excluded. But different cultures have different views on it. In the yoga tradition, it is identified as an entity named Atman or Supreme Self. And for 王阳明, it is identified with 良知. While for buddhists, it is no one. No matter what it is called and whether it is some entity, we do have the ability of monitoring the mind, as it is so when we are monitoring the mind.
+    You may wonder who is the observer? It is the mind that everything has been excluded. But different cultures have different views on it. In the yoga tradition, it is identified as an entity named Atman or Supreme Self. And for 王阳明, this entity is identified with 良知. While buddhists suggest that it should not be identified as entity. No matter what it is called and whether it is some entity, we do have the ability of monitoring the mind, as it is so when we are monitoring the mind.
 
 As discussed in a [previous note](2023-05-20-attention.md), the ability of monitoring the mind leads to controlled synaptic plasticity, by which we can plant what we want to cultivate and uproot what we want to eliminate. So, he who gains viveka gains the ability of shaping his brain at will.
 
