--- a/_posts/2023-08-25-viveka.md
+++ b/_posts/2023-08-25-viveka.md
@@ -7,9 +7,9 @@ title: Viveka
 
 Yogis and buddhists found that consciousness is not a continuum, but constitutes a series of indivisible temporal units, called moments. [^moments] It is like a movie made up of a series of frames. These moments are transient, leaving to us the illusion that consciousness is continuous. Viveka is the ability of discriminating these moments, realizing that a moment and the following are distinct, and that only after the falling of the preceding will a moment arise. [^viveka]
 
-  [^moments]: For details, see chapter 4 of _A Comprehensive Manual of Abhidhamma_, and the sections from 3.52 to 3.54 in _The Yoga Sutras of Patanjali_.
+  [^moments]: For details, see chapter 4 of _A Comprehensive Manual of Abhidhamma_, and the sections from 3.52 to 3.54 of _The Yoga Sutras of Patanjali_.
 
-  [^viveka]: Section 3.52 in _The Yoga Sutras of Patanjali_ defines viveka and declares the path to viveka:
+  [^viveka]: Section 3.52 of _The Yoga Sutras of Patanjali_ defines viveka and declares the path to viveka:
 
     > From samyama on the moment and its succession, there is knowledge born of discrimination.
 
