--- a/_posts/2023-08-25-viveka.md
+++ b/_posts/2023-08-25-viveka.md
@@ -13,19 +13,23 @@ Yogis and buddhists found that consciousness is not a continuum, but constitutes
 
     > From samyama on the moment and its succession, there is knowledge born of discrimination.
 
-    Here, "samyama" means concentration via focusing, meditation, and samadhi in due order. And the "knowledge born of discrimination" is viveka.
+    Here, "samyama" is the combination of concentration, meditation, and samadhi. And the "knowledge born of discrimination" is viveka.
 
 ## Viveka Leads to Superlative Ability of Monitoring Mind
 
-What is the life of his who gains viveka? While applying viveka, every moment is realized, so that his mind [^mind] is perfectly monitored. He lives in a state of constant identification with an observer [^observer], detached from whatever he is doing or thinking.
+While applying viveka, consciousness is realized not as a "room" full of objects, but a series in which there is just one object at each moment. Thus **every** object that appears in consciousness can be realized. So, he who acquires viveka gains the superlative ability of monitoring the mind [^mind].
 
   [^mind]: We use the word mind as an equivalent of consciousness.
 
-  [^observer]: Observer who monitors the mind.
+As discussed in a [previous note](2023-05-20-attention.md), the ability of monitoring the mind leads to controlled synaptic plasticity, by which we can plant what we want to cultivate and uproot what we want to eliminate. So, he who acquires viveka gains the ability of shaping his brain at will.
 
-    You may wonder who is the observer? It is the mind that everything has been excluded. But different cultures have different views on it. In the yoga tradition, it is identified as an entity named Atman or Supreme Self. And for 王阳明, this entity is identified with 良知. While buddhists suggest that it should not be identified as entity. No matter what it is called and whether it is some entity, we do have the ability of monitoring the mind, as it is so when we are monitoring the mind.
+## Practice of Viveka Should Be Gradual and Methodical
 
-As discussed in a [previous note](2023-05-20-attention.md), the ability of monitoring the mind leads to controlled synaptic plasticity, by which we can plant what we want to cultivate and uproot what we want to eliminate. So, he who gains viveka gains the ability of shaping his brain at will.
+While learning language, a beginner cannot gain any skill by joining a native party directly. Frustration also raises. One should start by listening low speed simple sentences. And gradually, talking with a native speaker would become natural. The same goes for practicing viveka. When practitioner starts practicing viveka by meditating on every moment in our daily life, he will be quickly caught up in so many transitive things. In fact, an untamed mind cannot realize its object, since it cannot stabilize to its object, like a shaky lens. So, instead of letting his mind wander around, a beginner should first intentionally, but gently, concentrate his attention on a single object, from which viveka can be realized.
+
+Furthermore, it is hard to discriminating moments on an object that lacks of variety, such as a constant scenery, nor on an object that is subtle and swift. The most proper object for starting the practice of viveka should be prominent and constantly varying in a proper speed. Respiration is prominent in many parts of body, and cannot stop its movement. So, a beginner should start his practice with the tactile sensation of breathing, in nasal cavity or on abdomen.
+
+While practicing, the mind may be disturbed. Practitioner should not entertain his mind by distraction, but intentionally bring attention back to the object, as if it has never appeared. However, when concentration has not yet been mature, the distraction may be so prominent and continual that practitioner fails to bring back his attention. In this case, it would be better to employ the distraction as a temporal object for practice; and switch to the original as long as it disappears.
 
 ## References
 
