--- a/_posts/2023-08-25-viveka.md
+++ b/_posts/2023-08-25-viveka.md
@@ -7,7 +7,7 @@ title: Viveka
 
 Yogis and buddhists found that consciousness is not a continuum, but constitutes a series of indivisible temporal units, called moments. [^moments] It is like a movie made up of a series of frames. These moments are transient, leaving to us the illusion that consciousness is continuous. Viveka is the ability of discriminating these moments, realizing that a moment and the following are distinct, and that only after the falling of the preceding will a moment arise. [^viveka]
 
-  [^moments]: For details, see chapter 4 of _A Comprehensive Manual of Abhidhamma_, and the sections from 3.52 to 3.54 of _The Yoga Sutras of Patanjali_.
+  [^moments]: For details, see the sections from 3.52 to 3.54 of _The Yoga Sutras of Patanjali_, chapter 4 of _A Comprehensive Manual of Abhidhamma_, and section "Insight Knowledge of Arising and Passing Away" of _Manual of Insight_.
 
   [^viveka]: Section 3.52 of _The Yoga Sutras of Patanjali_ defines viveka and declares the path to viveka:
 
@@ -33,7 +33,8 @@ While practicing, the mind may be disturbed. Practitioner should not entertain h
 
 ## References
 
-1. _A Comprehensive Manual of Abhidhamma_ by Bhikkhu Bodhi. ISBN: 1928706029.
-2. _The Yoga Sutras of Patanjali_ by Christopher Chapple, Yogi Ananda Viraj. ISBN: 8170302447.
+1. _The Yoga Sutras of Patanjali_ by Christopher Chapple, Yogi Ananda Viraj. ISBN: 8170302447.
+2. _A Comprehensive Manual of Abhidhamma_ by Bhikkhu Bodhi. ISBN: 1928706029.
+3. _Manual of Insight_ by Mahasi Sayadaw. ISBN: 9781614292777.
 
 ---
