--- a/_posts/2023-08-25-viveka.md
+++ b/_posts/2023-08-25-viveka.md
@@ -7,13 +7,15 @@ title: Viveka
 
 Yogis and buddhists found that consciousness is not a continuum, but constitutes a series of indivisible temporal units, called moments. [^moments] It is like a movie made up of a series of frames. These moments are transient, leaving to us the illusion that consciousness is continuous. Viveka is the ability of discriminating these moments, realizing that a moment and the following are distinct, and that only after the falling of the preceding will a moment arise. [^viveka]
 
-  [^moments]: For details, see the sections from 3.52 to 3.54 of _The Yoga Sutras of Patanjali_, chapter 4 of _A Comprehensive Manual of Abhidhamma_, and section "Insight Knowledge of Arising and Passing Away" of _Manual of Insight_.
+  [^moments]: For details, see the stanzas from 3.52 to 3.54 of _The Yoga Sutras of Patanjali_, chapter 4 of _A Comprehensive Manual of Abhidhamma_, and section "Insight Knowledge of Arising and Passing Away" of _Manual of Insight_.
 
-  [^viveka]: Section 3.52 of _The Yoga Sutras of Patanjali_ defines viveka and declares the path to viveka:
+  [^viveka]: Stanza 3.52 of _The Yoga Sutras of Patanjali_ defines viveka and declares the path to viveka:
 
     > From samyama on the moment and its succession, there is knowledge born of discrimination.
 
     Here, "samyama" is the combination of concentration, meditation, and samadhi. And the "knowledge born of discrimination" is viveka.
+
+    However, in many commentaries except for that by Vyasa, the discrimination is explained as that discriminating Atman from non-Atman, or Self from non-Self. In fact, in the following stanza (3.53), Patanjali explained that, based on this discrimination, things can be distinguished even though they share the same characters and position. As Heraclitus claimed, one could never step into the same river twice. And in the next stanza (3.55), Patanjali claimed that this ability will lead to the separation of Self and non-Self. So, it is confirmed that it is discriminating moments that is what Patanjali referred to, and that it is the result of this discrimination, instead of the discrimination itself, Self and non-Self are separated.
 
 ## Viveka Leads to Superlative Ability of Monitoring Mind
 
@@ -25,11 +27,13 @@ As discussed in a [previous note](2023-05-20-attention.md), the ability of monit
 
 ## Practice of Viveka Should Be Gradual and Methodical
 
-While learning language, a beginner cannot gain any skill by joining a native party directly. Frustration also raises. One should start by listening low speed simple sentences. And gradually, talking with a native speaker would become natural. The same goes for practicing viveka. When practitioner starts practicing viveka by meditating on every moment in our daily life, he will be quickly caught up in so many transitive things. In fact, an untamed mind cannot realize its object, since it cannot stabilize to its object, like a shaky lens. So, instead of letting his mind wander around, a beginner should first intentionally, but gently, concentrate his attention on a single object, from which viveka can be realized.
+To obtain a new skill, learning shall be gradual, starting at a simpler level, and increasing the difficulty only when the skill at the current level has been sufficiently practiced. So, the practice of viveka shall be gradually fulfilling the temporal series of objects in the mind with noting, until every moment can be realized.
 
-Furthermore, it is hard to discriminating moments on an object that lacks of variety, such as a constant scenery, nor on an object that is subtle and swift. The most proper object for starting the practice of viveka should be prominent and constantly varying in a proper speed. Respiration is prominent in many parts of body, and cannot stop its movement. So, a beginner should start his practice with the tactile sensation of breathing, in nasal cavity or on abdomen.
+Explicitly, it is better to begin practicing in an environment where interference is kept to a minimum. Noting whatever becomes prominent, such as distracting thoughts and bodily pains. If there is nothing conspicuous to note, fulfill the temporal series with noting the rising and falling of abdomen caused by breathing. Noting shall be concurrently following the appearance of the object to be noted. It is very helpful, especially in the early stage of practice, to label what is noted, not audibly, but in a gentle and relaxed way, using simple daily language like "thinking", "pain", "rising", and "falling". Also, it is better to limit bodily movement to a minimum; and when it becomes inevitable, the whole process shall be performed slowly, and be noted including the intention to move.
 
-While practicing, the mind may be disturbed. Practitioner should not entertain his mind by distraction, but intentionally bring attention back to the object, as if it has never appeared. However, when concentration has not yet been mature, the distraction may be so prominent and continual that practitioner fails to bring back his attention. In this case, it would be better to employ the distraction as a temporal object for practice; and switch to the original as long as it disappears.
+In the beginning, only coarse objects can be noted. But gradually, noting will become finer and finer; and more subtle objects in the temporal series can be realized on their own. When noting becomes fast and swift, more and more objects come into awareness; labeling all of them can be exhausted. In this situation, it is better to drop labels, but simply being aware of what is currently in the mind. [^Mahasi-method]
+
+  [^Mahasi-method]: The method of practice analyzed in this section is consistent with the Mahasi method, which is described in his _Manual of Insight_, especially in its chapter 5. This should not be a surprise, but a confirmation of validity and rationality of the analysis here.
 
 ## References
 
