--- a/_posts/2023-08-25-viveka.md
+++ b/_posts/2023-08-25-viveka.md
@@ -27,13 +27,13 @@ As discussed in a [previous note](2023-05-20-attention.md), the ability of monit
 
 ## Practice of Viveka Should Be Gradual and Methodical
 
-The practice of viveka is gradually fulfilling the temporal series of objects in the mind with noting, until every moment can be realized. [^noting] Note whatever becomes distinct in body and mind, such as painful feelings and distracting thoughts. If there is nothing conspicuous to note, fulfill the temporal series with noting the rising and falling of abdomen caused by breathing, which is constant and distinct. **Noting shall tightly follow the appearance of the object to be noted; and never shall you note an object which does not appear or has disappeared.** It may be found helpful, especially in the early stage of practice, to label what is noted, not audibly, but in a gentle and relaxed way, using simple daily language like "pain", "thinking", "rising", or "falling". When you feel multiple objects appear simultaneously, labeling any of them is valid; the point is being aware of them when they appear.
+The practice of viveka is gradually fulfilling the temporal series of objects in the mind with noting, until every moment can be realized. [^noting] Note whatever is currently distinct in the body and mind, such as painful feelings and distracting thoughts. If there is nothing conspicuous to note, fulfill the temporal series with noting the rising and falling of abdomen caused by breathing, which is constant and distinct. **Noting shall tightly follow the appearance of the object to be noted; and never shall you note an object which does not appear or has disappeared.** It may be found helpful, especially in the early stage of practice, to label what is noted, not audibly, but in a gentle and relaxed way, using simple daily language like "pain", "thinking", "rising", or "falling". So, with each noting, you realize what is in the mind in the current moment.
 
   [^noting]: When the temporal series of objects in the mind is fulfilled with noting, it will be like
 
       ⋯ → object → noting → object → noting → object → noting ⋯
 
-When practice is immature, practitioner will find that there are so many objects to be noted that it is difficult to catch up with the speed of the appearances and disappearances. For beginner, it is better to deliberately limit the perceived objects to a minimum. Since distinct objects come from the eyes, ears, bodily sensations, and thoughts, a beginner shall limit his vision or even close his eyes, practice in a quiet environment, and reduce unnecessary bodily movement; when bodily movement becomes inevitable, the whole process shall be performed slowly, and be noted including the intention to move. Mind wandering will naturally reduce its power when noting is consistent.
+When practice is immature, practitioner will find that there are so many objects to be noted that it is difficult to catch up with the speed of the appearances and disappearances. For beginner, it is better to deliberately limit the perceived objects to a minimum. Since distinct objects come from the eyes, ears, bodily sensations, and thoughts, a beginner shall limit his vision or even close his eyes, practice in a quiet environment, and reduce unnecessary bodily movement; when bodily movement becomes inevitable, the whole process shall be performed slowly, and be noted including the intention to move. Mind wandering will naturally reduce its power when noting is consistent. Even though limited, the objects to be noted can still be many, so that you may feel multiple objects appear simultaneously. In this case, labeling any of them is valid; the point is being aware of them when they appear.
 
 In the beginning, only coarse objects can be noted. But gradually, noting will become finer and finer; more subtle objects and their indistinguishable order in the temporal series can be realized on their own. When noting becomes fast and swift, more and more objects can be aware of; labeling all of them can be exhausted. In this situation, it is better to drop labels, but simply being aware of what is currently in the mind. [^Mahasi-method]
 
