--- a/_posts/2023-08-25-viveka.md
+++ b/_posts/2023-08-25-viveka.md
@@ -39,6 +39,8 @@ In the beginning, only coarse objects can be noted. But gradually, noting will b
 
   [^Mahasi-method]: The method of practice analyzed in this section is consistent with the Mahasi method, which is described in his _Manual of Insight_, especially in its chapter 5. This should not be a surprise, but a confirmation of validity and rationality of the analysis here.
 
+It is very helpful to think of the mind as a "room of awareness", an imagined room with doors through which objects come into and go out of the room one by one. Objects are those appearing in the mind. Noting is like a gatekeeper. When an object comes into the room, the gatekeeper recognizes what has come. Interestingly, the gatekeeper is in fact the mind itself, which means, like any other object, the recognition will occupy a moment.
+
 ## References
 
 1. _The Yoga Sutras of Patanjali_ by Christopher Chapple, Yogi Ananda Viraj. ISBN: 8170302447.
