--- a/_posts/2023-08-25-viveka.md
+++ b/_posts/2023-08-25-viveka.md
@@ -27,7 +27,7 @@ As discussed in a [previous note](2023-05-20-attention.md), the ability of monit
 
 ## Practice of Viveka Should Be Gradual and Methodical
 
-Objects are those appearing in the mind. They can be realized by noting. It is very helpful to think of the mind as a "room of awareness", an imagined room with doors through which objects go in and out of the room one by one. In this simile, noting is a gatekeeper. When an object comes into the room, the gatekeeper recognizes seeing as "seeing", hearing as "hearing", moving as "moving", feeling as "feeling", thinking as "thinking", and the like. Interestingly, the gatekeeper is in fact the mind itself, which means, like any other object, the recognition will occupy a moment in the series of moments of consciousness.
+Objects are those appearing in the mind. They can be realized by noting. It is very helpful to think of the mind as a "room of awareness", an imagined room with doors through which objects go in and out of the room one by one. In this simile, noting is a gatekeeper. When an object comes into the room, the gatekeeper recognizes what it is. He recognizes seeing as "seeing", hearing as "hearing", moving as "moving", feeling as "feeling", thinking as "thinking", and the like. Interestingly, the gatekeeper is in fact the mind itself, which means, like any other object, the recognition will occupy a moment in the series of moments of consciousness.
 
 So, the practice of viveka is gradually fulfilling the temporal series of objects in the mind with noting, until every moment can be realized. [^fulfill-with-noting] Practitioner shall note what is currently perceived, such as painful feelings and distracting thoughts. If there is nothing conspicuous to note, fulfill the temporal series with noting the rising and falling of abdomen caused by breathing, which is constant and distinct. **Noting shall tightly follow the appearance of the object to be noted; and never shall you note an object which does not appear or has disappeared.** It may be found helpful, especially in the early stage of practice, to label what is noted, not audibly, but in a gentle and relaxed way, using simple daily language like "pain", "thinking", "rising", or "falling". So, with each noting, practitioner realizes what is in the mind in the current moment.
 
