--- a/_posts/2023-08-25-viveka.md
+++ b/_posts/2023-08-25-viveka.md
@@ -27,15 +27,17 @@ As discussed in a [previous note](2023-05-20-attention.md), the ability of monit
 
 ## Practice of Viveka Should Be Gradual and Methodical
 
-Objects are those appearing in the mind. They can be realized by noting. It is very helpful to think of the mind as a "room of awareness", an imagined room with doors through which objects go in and out of the room one by one. In this simile, noting is a gatekeeper. When an object comes into the room, the gatekeeper recognizes who this is; so he recognizes seeing as "seeing", hearing as "hearing", moving as "moving", feeling as "feeling", thinking as "thinking", and the like. Interestingly, the gatekeeper is in fact the mind itself, which means, like any other object, the recognition will occupy a moment in the series of moments of consciousness.
+Objects are those appearing in the mind. They can be realized by noting. It is very helpful to think of the mind as a "room of awareness", an imagined room with doors through which objects go in and out of the room one by one. In this simile, noting is a gatekeeper. When an object comes into the room, the gatekeeper recognizes who this is; so he recognizes seeing as "seeing", hearing as "hearing", moving as "moving", feeling as "feeling", thinking as "thinking", and the like [^other-examples]. Interestingly, the gatekeeper is in fact the mind itself, which means, like any other object, the recognition will occupy a moment in the series of moments of consciousness.
 
-So, the practice of viveka is gradually fulfilling the temporal series of objects in the mind with noting, until every moment can be realized. [^fulfill-with-noting] Practitioner shall note what is currently perceived, such as painful feelings and distracting thoughts. If there is nothing conspicuous to note, fulfill the temporal series with noting the rising and falling of abdomen caused by breathing, which is constant and distinct. **Noting shall tightly follow the appearance of the object to be noted; and never shall you note an object which does not appear or has disappeared.** It may be found helpful, especially in the early stage of practice, to label what is noted, not audibly, but in a gentle and relaxed way, using simple daily language like "pain", "thinking", "rising", or "falling". So, with each noting, practitioner realizes what is in the mind in the current moment.
+  [^other-examples]: Other examples include recognizing stretching as "stretching", withdrawing as "withdrawing", chewing as "chewing", swallowing as "swallowing", angry as "angry", fear as "fear", "desire" as "desire", "pleasant" as "pleasant", mind wandering as "mind wandering", and imagining as "imaging". The point is precisely recognizing who comes into the room.
+
+So, the practice of viveka is gradually fulfilling the temporal series of objects in the mind with noting, until every moment can be realized. [^fulfill-with-noting] Practitioner shall note what is currently perceived, such as painful feelings and distracting thoughts. If there is nothing conspicuous to note, fulfill the temporal series with noting the rising and falling of abdomen caused by breathing, which is constant and distinct. **Noting shall tightly follow the appearance of the object to be noted; and never shall you note an object which does not appear or has disappeared.** It may be found helpful, especially in the early stage of practice, to make noting more concrete by labeling what is noted, not audibly, but in a gentle and relaxed way, using simple daily language like "pain", "thinking", "rising", or "falling". So, with each noting, practitioner realizes what is in the mind in the current moment.
 
   [^fulfill-with-noting]: When the temporal series of objects in the mind is fulfilled with noting, it will be like
 
       ⋯ → object A → note object A → object B → note object B → ⋯
 
-When practice is immature, practitioner will find that there are so many objects to be noted that it is difficult to catch up with the speed of the appearances and disappearances. For beginner, it is better to deliberately limit the perceived objects to a minimum. Since distinct objects come from the eyes, ears, bodily sensations, and thoughts, a beginner shall limit his vision or even close his eyes, practice in a quiet environment, and reduce unnecessary bodily movement; when bodily movement becomes inevitable, the whole process shall be performed slowly, and be noted including the intention to move. Mind wandering will naturally reduce its power when noting is consistent. Even though limited, the objects to be noted can still be many, so that you may feel multiple objects appear simultaneously. In this case, labeling any of them is valid; the point is being aware of them when they appear. In addition, some objects are too subtle to be noted accurately. Beginner shall simply omit them, diligently noting what is conspicuous for him.
+When practice is immature, practitioner will find that there are so many objects to be noted that it is difficult to catch up with the speed of the appearances and disappearances. For beginner, it is better to deliberately limit the perceived objects to a minimum. Since distinct objects come from the eyes, ears, bodily sensations, and thoughts, a beginner shall limit his vision or even close his eyes, practice in a quiet environment, and reduce unnecessary bodily movement; when bodily movement becomes inevitable, the whole process shall be performed slowly, and be noted including the intention to move. Mind wandering will naturally reduce its power when noting is consistent. Even though limited, the objects to be noted can still be many, so that you may feel multiple objects appear simultaneously. In this case, labeling any of them is valid; the point is being aware of them when they appear. In addition, some objects are too subtle to be noted precisely. Beginner shall simply omit them, diligently noting what is conspicuous for him.
 
 In the beginning, only coarse objects can be noted. But gradually, noting will become finer and finer; more subtle objects and their indistinguishable order in the temporal series can be realized on their own. When noting becomes fast and swift, more and more objects can be aware of; labeling all of them can be exhausted. In this situation, it is better to drop labels, but simply being aware of what is currently in the mind. [^Mahasi-method]
 
