--- a/_posts/2023-08-25-viveka.md
+++ b/_posts/2023-08-25-viveka.md
@@ -37,7 +37,7 @@ So, the practice of viveka is gradually fulfilling the temporal series of object
 
       ⋯ → object A → note object A → object B → note object B → ⋯
 
-When practice is immature, practitioner will find that there are so many objects to be noted that it is difficult to catch up with the speed of the appearances and disappearances. For beginner, it is better to deliberately limit the perceived objects to a minimum. Since distinct objects come from the eyes, ears, bodily sensations, and thoughts, a beginner shall limit his vision or even close his eyes, practice in a quiet environment, and reduce unnecessary bodily movement; when bodily movement becomes inevitable, the whole process shall be performed slowly, and be noted including the intention to move. Mind wandering will naturally reduce its power when noting is consistent. Even though limited, the objects to be noted can still be many, so that you may feel multiple objects appear simultaneously. In this case, labeling any of them is valid; the point is being aware of them when they appear. In addition, some objects are so rapid in speed or weak in strength that it is hard to draw attention to them so as to note them precisely. Beginner shall simply omit them, diligently noting what is conspicuous for him.
+When practice is immature, practitioner will find that there are so many objects to be noted that it is difficult to catch up with the speed of the appearances and disappearances. For beginner, it is better to deliberately limit the perceived objects to a minimum. Distinct objects come from the eyes, ears, bodily sensations, and thoughts. A beginner shall limit his vision or even close his eyes. A quiet environment is preferred to start his practice. Unnecessary bodily movement shall be limited; when bodily movement becomes inevitable, the whole process shall be performed slowly, and be noted including the intention to move. In the end, distracting thoughts will naturally lose its power when noting is consistent. Even though limited, the objects to be noted can still be many, so that you may feel multiple objects appear simultaneously. In this case, labeling any of them is valid; the point is being aware of them when they appear. In addition, some objects are so rapid in speed or weak in strength that it is hard to draw attention to them so as to note them precisely. Beginner shall simply omit them, diligently noting what is conspicuous for him.
 
 In the beginning, only coarse objects can be noted. But gradually, noting will become finer and finer; more subtle objects and their indistinguishable order in the temporal series can be realized on their own. When noting becomes fast and swift, more and more objects can be aware of; labeling all of them can be exhausted. In this situation, it is better to drop labels, but simply being aware of what is currently in the mind. [^Mahasi-method]
 
